[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/script/launcher/Connexion.gd" type="Script" id=1]

[node name="Connexion" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 290.0
margin_bottom = 230.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 270.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 250.0
margin_bottom = 170.0

[node name="Label4" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 14.0
text = "Connexion"
align = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 250.0
margin_bottom = 22.0

[node name="Label2" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 250.0
margin_bottom = 40.0
text = "Mail"

[node name="LineEdit2" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 250.0
margin_bottom = 68.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Label3" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 250.0
margin_bottom = 86.0
text = "Mot de passe"

[node name="LineEdit3" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 250.0
margin_bottom = 114.0
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="CheckBox" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer"]
visible = false
margin_top = 118.0
margin_right = 180.0
margin_bottom = 142.0
text = "Rester connecter"

[node name="LinkButton" type="LinkButton" parent="Panel/MarginContainer/VBoxContainer"]
visible = false
margin_top = 118.0
margin_right = 250.0
margin_bottom = 132.0
text = "Mot de passe perdus"
underline = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 250.0
margin_bottom = 122.0

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 250.0
margin_bottom = 146.0
text = "Jouer"

[node name="HTTPRequest" type="HTTPRequest" parent="Panel"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="Panel/HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
